# bachelor

./: .gitignore  README.md  clang_help.txt  description.md  linker.txt  risc32-virt.dtb  riscv32-virt.dts
freeRTOS/Demo/RISC-V_RV32_QEMU_VIRT_GCC/: Readme.md  compile_commands.json  main.c
freeRTOS/Demo/RISC-V_RV32_QEMU_VIRT_GCC/.cache/clangd/index/: RegTest.S.871A0844CCE4AC45.idx  main.c.48DEBEBE9D58DFFD.idx  main_full.c.7F8F4AC60D30261A.idx  ns16550.h.13DD7A17A23463FD.idx  printf-stdarg.c.ADE764696C7753FD.idx  riscv-virt.c.73BE781630C3E5E2.idx  riscv-virt.h.89129DFCC742E106.idx  start.S.7196CF81D9A344E1.idx  vector.S.0FAA58DBFFA930C3.idx
latex/: KUstyle.sty  glossaries.tex  main.tex  refs.bib  setup.tex
latex/assets/: KUstyle.sty
latex/sections/: Appendix.tex  Background.tex  Conclusion.tex  Design.tex  Evaluation.tex  Implementation.tex  Introduction.tex  RelatedWork.tex
latex/sections/implementation/: Implementation.tex  Libucontext.tex
notes/: Risc-V.norg  TODO.norg  baremetal.norg  defence_questions.md  freeRTOS.norg  index.norg  nanos.norg
presentation/: KUstyle.sty  README.md  main.aux  main.fdb_latexmk  main.fls  main.snm  main.tex
presentation/sections/: Background.tex  Conclusion.tex  Design.tex  Evaluation.tex  Implementation.tex  Introduction.tex  RelatedWork.tex
src/: Makefile  test.c
src/bare_metal/: .gdbinit  .lldbinit  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  a.out  alist.c  cmake_install.cmake  defines.h  linker.ld  main.c  main.elf  main.s  palloc.c  palloc.h  ram.ld  random_numbers.py  riscv32-virt.dtb  rom.ld  start.S  test.txt  validate.py
src/bare_metal/Testing/Temporary/: CTestCostData.txt  LastTest.log.tmp
src/bare_metal/asm/: start.S
src/bare_metal/include/: defines.h  kernel.h  threads.h  uart.h
src/bare_metal/interrupt/: ISR.S  ISR.c  ISR.h  PLIC.h  Readme.md  interrupt_table.S  interrupt_table.s
src/bare_metal/kernel/: kernel.c
src/bare_metal/linker/: ram.ld
src/bare_metal/merge/: merge.c  merge.h
src/bare_metal/misc/: main.s  riscv32-virt.dts
src/bare_metal/print/: printf-stdarg.c  uart.c
src/bare_metal/threads/: scheduler.c  threads.c  threads.h
src/bare_metal/threads/context/: bits.h  common-defs.h  common_trampoline.c  defs.h  libucontext.h  makecontext.c
src/freeRTOS/Demo/RISC-V_RV32_QEMU_VIRT_GCC/: FreeRTOSConfig.h
src/freeRTOS/Demo/RISC-V_RV32_QEMU_VIRT_GCC/.cache/clangd/index/: FreeRTOSConfig.h.24FA21709E03E570.idx  main.c.48DEBEBE9D58DFFD.idx  main_blinky.c.A79DD7DEE77C6F40.idx  ns16550.c.581D6B9873FBBC67.idx  riscv-reg.h.D7B8120297F71B92.idx
src/freeRTOS/extension/: CMakeLists.txt  DartConfiguration.tcl  FreeRTOSConfig.h  main.c  riscv-reg.h  riscv-virt.h
